[gd_scene load_steps=21 format=3 uid="uid://demetbmmfc3sm"]

[ext_resource type="Script" path="res://scripts/MIDI_Notes.gd" id="1_3ll4w"]
[ext_resource type="Script" path="res://scripts/midi_main.gd" id="1_jo87c"]
[ext_resource type="Shader" path="res://shaders/pause_menu_blur.gdshader" id="2_vs6fs"]
[ext_resource type="PackedScene" uid="uid://lt73xdtfgyuo" path="res://scenes/pause_menu.tscn" id="3_vf2tp"]
[ext_resource type="PackedScene" uid="uid://dtacf6kg6rwxg" path="res://scenes/spiral_particles.tscn" id="10_e3ntp"]
[ext_resource type="Material" uid="uid://b5qeey5ruelw1" path="res://materials/particles_mat.tres" id="10_mr4d0"]
[ext_resource type="Material" uid="uid://cj3ujrwh48kgc" path="res://materials/white_keys_mat.tres" id="10_wj7rp"]
[ext_resource type="Material" uid="uid://cj7e5yhxqclf5" path="res://materials/black_keys_mat.tres" id="11_0tc8c"]
[ext_resource type="Material" uid="uid://cu3axujswfcr1" path="res://materials/white_notes_on.tres" id="12_kiwm3"]
[ext_resource type="Script" path="res://scripts/Virtual_Keyboard.gd" id="12_nnbsg"]
[ext_resource type="Script" path="res://scripts/piano_controller.gd" id="13_0vjy6"]
[ext_resource type="Script" path="res://scripts/MIDI_Particles.gd" id="13_7uhe6"]
[ext_resource type="PackedScene" uid="uid://bh26616vg2jet" path="res://models/beta_keys.blend" id="13_8radr"]
[ext_resource type="Material" uid="uid://dgmbakuidedwe" path="res://materials/black_notes_on.tres" id="13_bekje"]
[ext_resource type="PackedScene" uid="uid://dhkr8srl7vpqg" path="res://models/white_note_cube_mesh.blend" id="14_44per"]
[ext_resource type="Shader" path="res://shaders/rounded_note_mesh.gdshader" id="15_nsxvj"]
[ext_resource type="PackedScene" uid="uid://f5efwh0x0i5i" path="res://models/piano_bg.blend" id="17_nwwxk"]
[ext_resource type="Script" path="res://scripts/bg.gd" id="18_yi44b"]
[ext_resource type="Material" uid="uid://c87r7xa3yubcp" path="res://materials/bg_mat.tres" id="19_pymkk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ep5ho"]
shader = ExtResource("2_vs6fs")
shader_parameter/amount = 3.0

[node name="MIDI" type="Node3D"]
script = ExtResource("1_jo87c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_ep5ho")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" parent="CanvasLayer" instance=ExtResource("3_vf2tp")]

[node name="BGImage_FileDialog" type="FileDialog" parent="CanvasLayer"]
title = "Open a File"
initial_position = 4
size = Vector2i(640, 480)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg, *.bmp, *.gif, *.tiff, *.tif, *.webp, *.dds, *.tga")
use_native_dialog = true

[node name="LoadProfileFileDialog" type="FileDialog" parent="CanvasLayer"]
title = "Open a File"
initial_position = 2
size = Vector2i(324, 180)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="SaveProfileFileDialog" type="FileDialog" parent="CanvasLayer"]
auto_translate_mode = 1
initial_position = 2
size = Vector2i(352, 180)
ok_button_text = "Save"
access = 2
use_native_dialog = true

[node name="PianoController" type="Node" parent="."]
script = ExtResource("13_0vjy6")

[node name="MIDI_Particles" type="Node3D" parent="."]
script = ExtResource("13_7uhe6")
note_on_white_key_particles_material = ExtResource("10_mr4d0")
particle_scene = ExtResource("10_e3ntp")

[node name="MIDI_Keyboard" parent="." instance=ExtResource("13_8radr")]
script = ExtResource("12_nnbsg")
white_keys_off_mat = ExtResource("10_wj7rp")
black_keys_off_mat = ExtResource("11_0tc8c")
white_notes_on_mat = ExtResource("12_kiwm3")
black_notes_on_mat = ExtResource("13_bekje")
white_light_offset = Vector3(0, 12.84, 0)
black_light_offset = Vector3(0, 10.557, 0)
light_attenuation = -1.0
light_angle_attenuation = 25.0
white_note_mesh_scene = ExtResource("14_44per")

[node name="MIDI_Notes" type="Node3D" parent="."]
script = ExtResource("1_3ll4w")
white_notes_on_mat = ExtResource("12_kiwm3")
black_notes_on_mat = ExtResource("13_bekje")
white_note_mesh_scene = ExtResource("14_44per")
shader = ExtResource("15_nsxvj")

[node name="MIDI_BG" parent="." instance=ExtResource("17_nwwxk")]
script = ExtResource("18_yi44b")
bg_material = ExtResource("19_pymkk")

[connection signal="toggled" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_K_B_Container/Virtual_Keyboard_Toggle" to="." method="_on_virtual_keyboard_toggle_toggled"]
[connection signal="toggled" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_K_B_Container/BG_Toggle" to="." method="_on_bg_toggle_toggled"]
[connection signal="toggled" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_N_P_Container/MIDI_Notes_Toggle" to="." method="_on_midi_notes_toggle_toggled"]
[connection signal="toggled" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_N_P_Container/Particles_Toggle" to="." method="_on_particles_toggle_toggled"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_BG_C_Container/Change_BG_Image_Button" to="MIDI_BG" method="_on_change_bg_image_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_BG_C_Container/Clear_BG_Image_Button" to="MIDI_BG" method="_on_clear_bg_image_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_BG_T_Container/BGTransparency_Slider" to="MIDI_BG" method="_on_bg_transparency_slider_value_changed"]
[connection signal="color_changed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Color_Picker_Container/ColorPicker" to="PianoController" method="_on_color_picker_color_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Scale_Container/Scale_Slider" to="." method="_on_scale_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Pos_Z_Container/Pos_Z_Slider" to="." method="_on_pos_z_slider_value_changed"]
[connection signal="toggled" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_C_Type_Container/OpenClose" to="PianoController" method="_on_open_close_toggled"]
[connection signal="item_selected" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Serial_Port_Container/SerialList" to="PianoController" method="_on_serial_list_item_selected"]
[connection signal="item_selected" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_L_Mode_Container/ModesList" to="PianoController" method="_on_modes_list_item_selected"]
[connection signal="item_selected" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Animation_Container/AnimationsList" to="PianoController" method="_on_animations_list_item_selected"]
[connection signal="value_changed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Fade_Container/Fade_Slider" to="PianoController" method="_on_fade_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_S_L_Container/Splash_Length_Slider" to="PianoController" method="_on_splash_length_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_BG_Brightness_Container/BG_Brightness_Slider" to="PianoController" method="_on_bg_brightness_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Transposition_Container8/Transposition_Slider" to="PianoController" method="_on_transposition_slider_value_changed"]
[connection signal="toggled" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Transposition_Container8/T_Octave_Button" to="PianoController" method="_on_t_octave_button_toggled"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_P_Size_Container/Dec_P_Size_Button" to="PianoController" method="_on_dec_p_size_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_P_Size_Container/Inc_P_Size_Button" to="PianoController" method="_on_inc_p_size_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_P_Size_Container/Update_BG_Button" to="PianoController" method="_on_update_bg_button_pressed"]
[connection signal="toggled" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_LED_Strip_Toggles_Container/FixLED_Toggle" to="PianoController" method="_on_fix_led_toggle_toggled"]
[connection signal="toggled" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_LED_Strip_Toggles_Container/BGLED_Toggle" to="PianoController" method="_on_bgled_toggle_toggled"]
[connection signal="toggled" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_LED_Strip_Toggles_Container/REVLED_Toggle" to="PianoController" method="_on_revled_toggle_toggled"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Profile_Container/LoadProfileButton" to="PianoController" method="_on_load_profile_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel_Container/Margin_Sub/VBox_Root/HBox_Profile_Container/SaveProfileButton" to="PianoController" method="_on_save_profile_button_pressed"]
[connection signal="file_selected" from="CanvasLayer/BGImage_FileDialog" to="MIDI_BG" method="_on_bg_image_file_dialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/LoadProfileFileDialog" to="PianoController" method="_on_load_profile_file_dialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/SaveProfileFileDialog" to="PianoController" method="_on_save_profile_file_dialog_file_selected"]

[editable path="CanvasLayer/Menu"]
[editable path="MIDI_Keyboard"]
